# django-project-template

./: .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.build.yml  docker-compose.deploy.yml  docker-compose.dev.yml  docker-compose.traefik.yml  docker-compose.yml  example.env  pyproject.toml  requirements.txt  wait_for_db.sh
.github/workflows/: backend-deploy.yml  ci.yml  deploy.yml  shared-services-deploy.yml
apps/shared/: storage_backends.py
conf/: asgi.py  settings.py  swagger.py  urls.py  wsgi.py
conf/settings/: base.py  dev.py
deployment/: Dockerfile  deploy.sh  docker-compose.shared.yml  entrypoint.sh
deployment/dev/: .env.example  docker-compose.yml
deployment/dev/prometheus/: prometheus.yml
deployment/prod/: .env.example  docker-compose.yml
deployment/prod/grafana/provisioning/dashboards/: dashboards.yml
deployment/prod/grafana/provisioning/datasources/: prometheus.yml
deployment/prod/prometheus/: prometheus.yml
prometheus/: prometheus.yml
requirements/: base.txt  dev.txt
server/: nginx.conf  nginx.dev.conf
