[project]
name = "django-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.13",
    "django-cors-headers>=4.7.0",
    "django-debug-toolbar>=5.2.0",
    "django-filter>=25.1",
    "django-import-export>=4.3.9",
    "django-jazzmin>=3.0.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.28.0",
    "drf-standardized-errors>=0.15.0",
    "flake8>=7.3.0",
    "gunicorn>=23.0.0",
    "pillow>=11.3.0",
    "prometheus-client>=0.22.1",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "redis>=6.2.0",
]
